--- a/style.css
+++ b/style.css
@@ -72,3 +72,9 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+@media (min-width: 320px) {
+  .clearBtn {
+    width: 100px;
+  }
+}
