Changed the padding between the current day and the calendar because I thought it was too big of a gap and it was annoying me.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
   font-size: 16px;
 }
 
+.p-5 {
+  padding-bottom: 1rem!important;
+}
+
 textarea {
   background: transparent;
   border: none;
